k8s/helm/releases/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/request-timeout: "300s"
    traefik.ingress.kubernetes.io/buffering.maxRequestBodyBytes: "50000000"
spec:
  rules:
    - host: jenkins.loeffelmeister.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
